--- a/test.html
+++ b/test.html
@@ -56,29 +56,13 @@ function _init(){
     const ns=_norm(SECRET);
     if(nv!==ns) return _kill();
     const ov=document.getElementById('pw-overlay'); if(ov) ov.remove();
+    try{const au=new Audio('Lonely.mp3');au.loop=true;au.volume=1;au.play().catch(()=>{});}catch(e){}
   });
 }
 _init();
 })();
 </script>
 
-
-        <base href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-<link rel="apple-touch-icon" href="/favicon.png">
-    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5521219086088837" crossorigin="anonymous"></script>
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WX5VS54ZDW"></script>
-    <meta name="google-adsense-account" content="ca-pub-5521219086088837">
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-WX5VS54ZDW');
-    </script>
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>X3n0nN3tw0rk</title>
