--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function _init(){
     const ns=_norm(SECRET);
     if(nv!==ns) return _kill();
     const ov=document.getElementById('pw-overlay'); if(ov) ov.remove();
-    try{const au=new Audio('Lonely.mp3');au.loop=true;au.volume=1;au.play().catch(()=>{});}catch(e){}
+    try{const au=new Audio('daisy-daisy.mp3');au.loop=true;au.volume=1;au.play().catch(()=>{});}catch(e){}
   });
 }
 _init();
@@ -192,6 +192,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
