--- a/test.html
+++ b/test.html
@@ -1476,5 +1476,52 @@ HTMLCanvasElement.prototype.toDataURL = function (...args) {
     return "";
 };
     </script>
+    <!-- Spotify Jukebox -->
+<div id="spotifyJukebox" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 340px;
+  height: 480px;
+  background: #000;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+  display: none;
+  z-index: 9999;
+">
+  <iframe style="border:none;width:100%;height:100%;"
+    src="https://open.spotify.com/embed/playlist/0CFHULUBj3wKgVZlEUjDk6?utm_source=generator"
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+</div>
+
+<!-- Toggle Button -->
+<button id="toggleJukebox" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #1DB954;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  font-size: 26px;
+  cursor: pointer;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  z-index: 10000;
+">🎵</button>
+
+<script>
+const toggle = document.getElementById('toggleJukebox');
+const box = document.getElementById('spotifyJukebox');
+let open = false;
+
+toggle.addEventListener('click', () => {
+  open = !open;
+  box.style.display = open ? 'block' : 'none';
+});
+</script>
+
 </body>
 </html>
