--- a/singlefile.html
+++ b/singlefile.html
@@ -1474,7 +1474,7 @@ HTMLCanvasElement.prototype.toDataURL = function (...args) {
 const playlist = [
   "JukeBox/I LOVE YOU SO JUMPSTYLE (Slowed).mp3",
   "JukeBox/Lady Gaga - Judas - GOJO VS SUKUNA.mp3",
-  "JukeBox/Montagem Direção (Slowed).mp3", // removed extra space
+  "JukeBox/Montagem_Direção.mp3", // removed extra space
   "JukeBox/1750140333_m_8-m8vaa09_3209.mp3"
 ];
 
