--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ _init();
 const playlist = [
   "JukeBox/I LOVE YOU SO JUMPSTYLE (Slowed).mp3",
   "JukeBox/Lady Gaga - Judas - GOJO VS SUKUNA.mp3",
-  "JukeBox/Montagem_Direção.mp3", // removed extra space
+  "JukeBox/Montagem_Direcao.mp3", // removed extra space
   "JukeBox/1750140333_m_8-m8vaa09_3209.mp3"
 ];
 
@@ -323,6 +323,7 @@ playTrack(0);
 
 </body>
 </html>
+
 
 
 
