--- a/index.html
+++ b/index.html
@@ -403,10 +403,16 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
+<!-- Featured Zones wrapper initially hidden -->
+<details id="featuredZonesWrapper" hidden>
+    <summary>Featured Zones</summary>
+    <div id="featuredZones"></div>
+</details>
 
 
 </body>
 </html>
+
 
 
 
