--- a/singlefile.html
+++ b/singlefile.html
@@ -1647,6 +1647,11 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
+<!-- Featured Zones wrapper initially hidden -->
+<details id="featuredZonesWrapper" hidden>
+    <summary>Featured Zones</summary>
+    <div id="featuredZones"></div>
+</details>
 
 
 
