--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
-<!-- Featured Zones wrapper initially hidden -->
-<details id="featuredZonesWrapper" hidden>
+<!-- Featured Zones wrapper hidden completely -->
+<details id="featuredZonesWrapper" style="display: none;">
     <summary>Featured Zones</summary>
     <div id="featuredZones"></div>
 </details>
@@ -412,6 +412,7 @@ playTrack(0);
 
 </body>
 </html>
+
 
 
 
