--- a/singlefile.html
+++ b/singlefile.html
@@ -1647,12 +1647,11 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
-<!-- Featured Zones wrapper initially hidden -->
-<details id="featuredZonesWrapper" hidden>
+<!-- Featured Zones wrapper hidden completely -->
+<details id="featuredZonesWrapper" style="display: none;">
     <summary>Featured Zones</summary>
     <div id="featuredZones"></div>
 </details>
-
 
 
 </body>
