--- a/test.html
+++ b/test.html
@@ -1653,12 +1653,11 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
-<!-- Featured Zones wrapper initially hidden -->
-<details id="featuredZonesWrapper" hidden>
+<!-- Featured Zones wrapper hidden completely -->
+<details id="featuredZonesWrapper" style="display: none;">
     <summary>Featured Zones</summary>
     <div id="featuredZones"></div>
 </details>
-
 
 </body>
 </html>
