--- a/index.html
+++ b/index.html
@@ -403,8 +403,7 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
-<!-- Featured Zones wrapper hidden completely -->
-<details id="featuredZonesWrapper" style="display: none;">
+<details id="featuredZonesWrapper">
     <summary>Featured Zones</summary>
     <div id="featuredZones"></div>
 </details>
@@ -412,6 +411,7 @@ playTrack(0);
 
 </body>
 </html>
+
 
 
 
