--- a/singlefile.html
+++ b/singlefile.html
@@ -1647,11 +1647,11 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
-<!-- Featured Zones wrapper hidden completely -->
-<details id="featuredZonesWrapper" style="display: none;">
+<details id="featuredZonesWrapper">
     <summary>Featured Zones</summary>
     <div id="featuredZones"></div>
 </details>
+
 
 
 </body>
