--- a/test.html
+++ b/test.html
@@ -1653,8 +1653,7 @@ function updateUI() {
 createSpotifyUI();
 playTrack(0);
 </script>
-<!-- Featured Zones wrapper hidden completely -->
-<details id="featuredZonesWrapper" style="display: none;">
+<details id="featuredZonesWrapper">
     <summary>Featured Zones</summary>
     <div id="featuredZones"></div>
 </details>
