--- a/test.html
+++ b/test.html
@@ -746,9 +746,9 @@ footer {
    </script>
 
     <main>
-        <details id="featuredZonesWrapper" open>
-            <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary>
-            <div id="featuredZones" class="zone-container"></div>
+        <!-- <details id="featuredZonesWrapper" open> -->
+            <!-- <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary> -->
+            <!-- <div id="featuredZones" class="zone-container"></div> -->
         </details>
         <br><hr><br>
         <details id="allZonesWrapper" open>
