--- a/singlefile.html
+++ b/singlefile.html
@@ -752,10 +752,10 @@ footer {
    </script>
 
     <main>
-        <details id="featuredZonesWrapper" open>
+        <!-- <details id="featuredZonesWrapper" open>
             <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary>
             <div id="featuredZones" class="zone-container"></div>
-        </details>
+        </details> -->
         <br><hr><br>
         <details id="allZonesWrapper" open>
             <summary id="allSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">All Zones</summary>
