--- a/test.html
+++ b/test.html
@@ -749,7 +749,7 @@ footer {
         <!-- <details id="featuredZonesWrapper" open> -->
             <!-- <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary> -->
             <!-- <div id="featuredZones" class="zone-container"></div> -->
-        </details>
+        <!-- </details> -->
         <br><hr><br>
         <details id="allZonesWrapper" open>
             <summary id="allSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">All Zones</summary>
