--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@ _init();
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
     <main>
-        <details id="featuredZonesWrapper" open>
+        <!-- <details id="featuredZonesWrapper" open>
             <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary>
             <div id="featuredZones" class="zone-container"></div>
-        </details>
+        </details> -->
         <br><hr><br>
         <details id="allZonesWrapper" open>
             <summary id="allSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">All Zones</summary>
@@ -411,6 +411,7 @@ playTrack(0);
 
 </body>
 </html>
+
 
 
 
