--- a/script.html
+++ b/script.html
@@ -1,9 +1,61 @@
-<!-- secretpage.html -->
-<html>
-  <head>
-    <title>Bleh</title>
-  </head>
-  <body style="background:black;color:white;">
-    <h1>Test</h1>
-  </body>
-</html>
+<div style="
+  width: 100%;
+  height: 600px;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid #333;
+  font-family: Arial, sans-serif;
+  background: #1e1e1e;
+  color: white;
+">
+  
+  <!-- Top bar -->
+  <div style="
+    background: #2b2b2b;
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  ">
+    <button onclick="browserIframe.src = browserUrl.value" style="
+      background:#444;
+      border:none;
+      padding:6px 10px;
+      color:white;
+      border-radius:4px;
+      cursor:pointer;
+    ">Go</button>
+
+    <button onclick="browserIframe.src = browserIframe.src" style="
+      background:#444;
+      border:none;
+      padding:6px 10px;
+      color:white;
+      border-radius:4px;
+      cursor:pointer;
+    ">⟳</button>
+
+    <input id="browserUrl"
+      style="
+        flex:1;
+        padding:6px;
+        border-radius:4px;
+        border:none;
+        background:#3a3a3a;
+        color:white;
+      "
+      placeholder="Enter URL (https://...)"
+    >
+  </div>
+
+  <!-- Browser iframe -->
+  <iframe id="browserIframe"
+    src="https://www.example.com"
+    style="width:100%; height:540px; border:none; background:white;">
+  </iframe>
+
+</div>
+
+<script>
+const browserUrl = document.getElementById("browserUrl");
+const browserIframe
