--- a/script.html
+++ b/script.html
@@ -1,61 +1,45 @@
 <div style="
   width: 100%;
   height: 600px;
-  border-radius: 10px;
+  border-radius: 12px;
   overflow: hidden;
-  border: 2px solid #333;
-  font-family: Arial, sans-serif;
+  border: 2px solid #222;
   background: #1e1e1e;
+  font-family: Arial, sans-serif;
   color: white;
 ">
-  
-  <!-- Top bar -->
+
+  <!-- Top navigation bar -->
   <div style="
     background: #2b2b2b;
     padding: 8px;
     display: flex;
-    align-items: center;
     gap: 8px;
+    align-items: center;
   ">
-    <button onclick="browserIframe.src = browserUrl.value" style="
-      background:#444;
-      border:none;
-      padding:6px 10px;
-      color:white;
-      border-radius:4px;
-      cursor:pointer;
-    ">Go</button>
+    <button onclick="browserIframe.src = browserUrl.value"
+      style="background:#444;border:none;padding:6px 12px;color:white;border-radius:4px;">
+      Go
+    </button>
 
-    <button onclick="browserIframe.src = browserIframe.src" style="
-      background:#444;
-      border:none;
-      padding:6px 10px;
-      color:white;
-      border-radius:4px;
-      cursor:pointer;
-    ">⟳</button>
+    <button onclick="browserIframe.src = browserIframe.src"
+      style="background:#444;border:none;padding:6px 12px;color:white;border-radius:4px;">
+      ⟳
+    </button>
 
     <input id="browserUrl"
-      style="
-        flex:1;
-        padding:6px;
-        border-radius:4px;
-        border:none;
-        background:#3a3a3a;
-        color:white;
-      "
       placeholder="Enter URL (https://...)"
-    >
+      style="flex:1;padding:6px;border-radius:4px;border:none;background:#3a3a3a;color:white;">
   </div>
 
-  <!-- Browser iframe -->
+  <!-- Browser window -->
   <iframe id="browserIframe"
-    src="https://www.example.com"
-    style="width:100%; height:540px; border:none; background:white;">
+    src="https://duckduckgo.com"
+    style="width:100%;height:540px;border:none;background:white;">
   </iframe>
-
 </div>
 
 <script>
 const browserUrl = document.getElementById("browserUrl");
-const browserIframe
+const browserIframe = document.getElementById("browserIframe");
+</script>
