Remove commented hello tag from script.html

--- a/script.html
+++ b/script.html
@@ -43,4 +43,4 @@
 const browserUrl = document.getElementById("browserUrl");
 const browserIframe = document.getElementById("browserIframe");
 </script>
-//
+<!--hello-->
