--- a/script.html
+++ b/script.html
@@ -1,46 +1,24 @@
-<div style="
-  width: 100%;
-  height: 600px;
-  border-radius: 12px;
-  overflow: hidden;
-  border: 2px solid #222;
-  background: #1e1e1e;
-  font-family: Arial, sans-serif;
-  color: white;
-">
+<!DOCTYPE html>
+<html>
+<head>
+<title>Embedded 1ball.st</title>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+</style>
+</head>
+<body>
 
-  <!-- Top navigation bar -->
-  <div style="
-    background: #2b2b2b;
-    padding: 8px;
-    display: flex;
-    gap: 8px;
-    align-items: center;
-  ">
-    <button onclick="browserIframe.src = browserUrl.value"
-      style="background:#444;border:none;padding:6px 12px;color:white;border-radius:4px;">
-      Go
-    </button>
+<iframe src="https://1ball.st/" allowfullscreen></iframe>
 
-    <button onclick="browserIframe.src = browserIframe.src"
-      style="background:#444;border:none;padding:6px 12px;color:white;border-radius:4px;">
-      ⟳
-    </button>
-
-    <input id="browserUrl"
-      placeholder="Enter URL (https://...)"
-      style="flex:1;padding:6px;border-radius:4px;border:none;background:#3a3a3a;color:white;">
-  </div>
-
-  <!-- Browser window -->
-  <iframe id="browserIframe"
-    src="https://duckduckgo.com"
-    style="width:100%;height:540px;border:none;background:white;">
-  </iframe>
-</div>
-
-<script>
-const browserUrl = document.getElementById("browserUrl");
-const browserIframe = document.getElementById("browserIframe");
-</script>
-<!--hello-->
+</body>
+</html>
