--- a/script.html
+++ b/script.html
@@ -1,24 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Embedded 1ball.st</title>
-<style>
-  body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-  }
-  iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Embed Gallery</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+    h1 {
+      text-align: center;
+    }
+    .link-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-bottom: 40px;
+      gap: 10px;
+    }
+    .link-list button {
+      padding: 10px 15px;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      font-weight: bold;
+    }
+    .link-list button:hover {
+      background-color: #0056b3;
+    }
+    .embed-container {
+      display: flex;
+      justify-content: center;
+    }
+    iframe {
+      width: 90%;
+      height: 600px;
+      border: 2px solid #ccc;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
 
-<iframe src="https://1ball.st/" allowfullscreen></iframe>
+  <h1>Embed Link Gallery</h1>
+
+  <!-- Buttons for the links -->
+  <div class="link-list">
+    <button onclick="loadEmbed(0)">Site 1</button>
+    <button onclick="loadEmbed(1)">Site 2</button>
+    <button onclick="loadEmbed(2)">Site 3</button>
+    <button onclick="loadEmbed(3)">Site 4</button>
+    <button onclick="loadEmbed(4)">Site 5</button>
+  </div>
+
+  <!-- Embedded iframe -->
+  <div class="embed-container">
+    <iframe id="embedFrame" src="" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <script>
+    // Index of links - fill in your URLs manually
+    const links = [
+      "mathstutor.life", // Link 1
+      "1ball.st", // Link 2
+      "chatgpt.com", // Link 3
+      "youtube.com", // Link 4
+      "x3n0nn3tw0rk.github.io"  // Link 5
+    ];
+
+    function loadEmbed(index) {
+      const iframe = document.getElementById('embedFrame');
+      iframe.src = links[index];
+    }
+  </script>
 
 </body>
 </html>
